Доработана ViewModel и добавлены макеты

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">CryptoApp</string>
+    <string name="desc_iv_logo_coin">Logo of coin</string>
 </resources>
